--- a/frontend/src/css/ConferenceList.css
+++ b/frontend/src/css/ConferenceList.css
@@ -40,6 +40,7 @@ a {
     flex-direction: row;
     border-radius: 20px;
     padding: 10px;
+    margin-bottom: 15px;
     transition: 0.4s ease-in-out all;
   }
   .conference-details {
@@ -51,8 +52,11 @@ a {
   }
   .conference-image {
     width: 320px;
-    height: 140px;
+    height: 188px;
     border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     object-fit: cover;
   }
 }
