--- a/frontend/src/css/ConferenceList.css
+++ b/frontend/src/css/ConferenceList.css
@@ -40,6 +40,7 @@ a {
     flex-direction: row;
     border-radius: 20px;
     padding: 10px;
+    height: 220px;
     margin-bottom: 15px;
     transition: 0.4s ease-in-out all;
   }
@@ -51,8 +52,8 @@ a {
     width: 100%;
   }
   .conference-image {
-    width: 320px;
-    height: 188px;
+    min-width: 300px;
+    min-height: 200px;
     border-radius: 10px;
     display: flex;
     justify-content: center;
